forgot to fix the Product Grid

--- a/product-grid/product-grid.html
+++ b/product-grid/product-grid.html
@@ -100,23 +100,23 @@
                           <tr>
                             <td><img src="../images/gallery/4.jpg" alt="Scatman"></td>
                             <td>4</td>
-                            <td>The College Years</td>
-                            <td>Released between August 2015 and July 2016, these five levels detail what happened to the SLB family ever since college began.</td>
-                            <td>$9.99</td>
+                            <td>Best of Scatman John</td>
+                            <td>This music CD contains twenty hits from the legendary jazz singer, Scatman John.</td>
+                            <td>$19.99</td>
                         </tr>
                         <tr>
                             <td><img src="../images/gallery/5.png" alt="SMF"></td>
                             <td>5</td>
-                            <td>The SLB Trilogy</td>
-                            <td>Spanning from August 2009 to February 2014, these three games are the main adventures.</td>
-                            <td>$59.99</td>
+                            <td>Super Mario Flash Levels</td>
+                            <td>Nearing a decade old, these levels were what the SLB staff created during The Great Recession's beginning. Tragically lost due to computer problems, only three worlds are what remian.</td>
+                            <td>$9.99</td>
                         </tr>
                         <tr>
                             <td><img src="../images/gallery/6.png" alt="WMM"></td>
                             <td>6</td>
-                            <td>Pop-Tarts</td>
-                            <td>Our studies show that Pop-Tarts are great. Since we also enjoy eating them, others should have the ability to.</td>
-                            <td>$4.99 per box, $0.99 per package</td>
+                            <td>Windows Movie Maker Movies</td>
+                            <td>Old movies made many years ago. Don't bother with these; they're quite terrible</td>
+                            <td>$5.00 per set, $0.99 per movie</td>
                         </tr>              
                     </table>
                 </div>
